website: fix overflow on code snippets

--- a/website/src/styles/app.scss
+++ b/website/src/styles/app.scss
@@ -121,6 +121,14 @@ code {
   font-family: "Source Code Pro", monospace;
 }
 
+code {
+  padding: 0.2rem 0.5rem;
+  margin: 0;
+  font-size: 90%;
+  border-radius: 4px;
+  background: var(--input-background-color);
+}
+
 .jsx-demo {
   background: #fff;
   margin-bottom: 2.5rem;
