--- a/website/src/styles/skeleton.scss
+++ b/website/src/styles/skeleton.scss
@@ -202,10 +202,8 @@ li {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 code {
   padding: 0.2rem 0.5rem;
-  margin: 0 0.2rem;
+  margin: 0;
   font-size: 90%;
-  white-space: nowrap;
-  background: white;
   border-radius: 4px;
 }
 
